--- a/dilithium/package.json
+++ b/dilithium/package.json
@@ -8,6 +8,7 @@
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
     "circular-dependency-plugin": "^1.1.0",
     "webpack": "^1.13.2"
   },
